@@ -1,0 +1,5 @@
+Test the way the situation is handled when different atoms have
+different count rations in the declared formula and the full cell
+formula, and there is no consensus (i.e. no set of atom types that is
+larger than the half of all atom types in the formula that all have
+the same ratio in the declared and the calculated formula).
