@@ -1,0 +1,113 @@
+#------------------------------------------------------------------------------
+#$Date: 2016-02-16 03:10:39 +0200 (Tue, 16 Feb 2016) $
+#$Revision: 176453 $
+#$URL: svn://cod.ibt.lt/cod/cif/7/05/11/7051132.cif $
+#------------------------------------------------------------------------------
+#
+# This file is available in the Crystallography Open Database (COD),
+# http://www.crystallography.net/
+#
+# All data on this site have been placed in the public domain by the
+# contributors.
+#
+data_7051132
+loop_
+_publ_author_name
+'De Munno, Giovanni '
+'Francesca Cipriani'
+'Donatella Armentano'
+'Miguel Julve'
+'Jose Antonio Real'
+_publ_section_title
+;
+Polycatenane systems from Co(II) and trans-1,2-bis(4-pyridyl)ethene [bpe].
+Synthesis and structure of [Co(bpe)2(NCS)2].CH3OH,
+[Co(bpe)2(H2O)2](ClO4)2.2CH3OH and [Co(bpe)2(H2O)2(CH3OH)2](ClO4)2.bpe.H2O
+;
+_journal_name_full               'New Journal of Chemistry'
+_journal_year                    2001
+_chemical_formula_moiety         '[Co(bpe)2(NCS)2].CH3OH'
+_chemical_formula_sum            'C27 H24 Co N6 O S2'
+_chemical_formula_weight         571.54
+_space_group_IT_number           130
+_symmetry_cell_setting           tetragonal
+_symmetry_space_group_name_Hall  '-P 4a 2ac'
+_symmetry_space_group_name_H-M   'P 4/n c c :2'
+_cell_angle_alpha                90.
+_cell_angle_beta                 90.
+_cell_angle_gamma                90.
+_cell_formula_units_Z            4
+_cell_length_a                   15.798(5)
+_cell_length_b                   15.798(5)
+_cell_length_c                   15.674(7)
+_cell_measurement_temperature    295
+_cell_volume                     3912(2)
+_diffrn_ambient_temperature      295
+_refine_ls_R_factor_obs          8.48
+_refine_ls_wR_factor_obs         13.17
+_cod_original_sg_symbol_H-M      'P 4/n c c'
+_cod_original_formula_sum        'C27 H24 S2 Co N6 O'
+_cod_database_code               7051132
+loop_
+_symmetry_equiv_pos_as_xyz
+x,y,z
+-x+1/2,-y+1/2,z
+-y+1/2,x,z
+y,-x+1/2,z
+-x,y+1/2,-z+1/2
+x+1/2,-y,-z+1/2
+y+1/2,x+1/2,-z+1/2
+-y,-x,-z+1/2
+-x,-y,-z
+x+1/2,y+1/2,-z
+y+1/2,-x,-z
+-y,x+1/2,-z
+x,-y+1/2,z+1/2
+-x+1/2,y,z+1/2
+-y+1/2,-x+1/2,z+1/2
+y,x,z+1/2
+loop_
+_atom_site_label
+_atom_site_occupancy
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+_atom_site_U_iso_or_equiv
+_atom_site_thermal_displace_type
+_atom_site_type_symbol
+_atom_site_calc_flag
+_atom_site_calc_attached_atom
+_atom_site_disorder_group
+Co1 0.25 0.25(4) 0.75 0.25 0.043 Uani Co . . .
+N1 1.00 0.1849(8) 0.6787(8) 0.1532(7) 0.053(5) Uani N . . .
+C1 1.00 0.140(1) 0.715(1) 0.093(1) 0.070(6) Uani C . . .
+C2 1.00 0.077(1) 0.674(1) 0.040(1) 0.077(7) Uani C . . .
+C3 1.00 0.072(1) 0.586(1) 0.0474(9) 0.064(6) Uani C . . .
+C4 1.00 0.125(1) 0.545(1) 0.107(1) 0.064(6) Uani C . . .
+C5 1.00 0.179(1) 0.593(1) 0.1588(9) 0.057(5) Uani C . . .
+C6 1.00 0.011(1) 0.5395(9) -0.007(1) 0.080(6) Uani C . . .
+N2 0.50 0.3410(8) 0.6590(8) 0.25 0.059(4) Uani N . . .
+C7 0.50 0.391(1) 0.609(1) 0.25 0.084(7) Uani C . . .
+S1 0.50 0.4630(5) 0.5370(5) 0.25 0.35(1) Uani S . . .
+H5 1.00 0.214(1) 0.565(1) 0.2000(9) 0.06 iso H . C5 .
+H1 1.00 0.147(1) 0.775(1) 0.086(1) 0.06 iso H . C1 .
+H6 1.00 -0.017(1) 0.5805(9) -0.042(1) 0.06 iso H . C6 .
+H4 1.00 0.123(1) 0.485(1) 0.113(1) 0.06 iso H . C4 .
+H2 1.00 0.042(1) 0.704(1) -0.001(1) 0.06 iso H . C2 .
+loop_
+_geom_bond_atom_site_label_1
+_geom_bond_atom_site_label_2
+_geom_bond_distance
+_geom_bond_site_symmetry_1
+_geom_bond_site_symmetry_2
+N1 C1 1.31(2) . .
+N1 C5 1.37(2) . .
+N1 Co1 2.15(1) . .
+C1 C2 1.45(2) . .
+C2 C3 1.40(2) . .
+C3 C4 1.41(2) . .
+C3 C6 1.48(2) . .
+C4 C5 1.39(2) . .
+N2 C7 1.11(2) . .
+C7 S1 1.62(2) . .
+C6 C6 1.39(2) . 9_565
