@@ -1,5 +1,5 @@
 scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_003.inp data_1a: WARNING, cell angle data item '_cell_angle_gamma' was not found -- taking default value 90 degrees.
 scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_003.inp data_2a: WARNING, not enough data to estimate cell volume -- cell length data item '_cell_length_b' was not found.
-scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_003.inp data_2a: ERROR, not enough data to estimate Z; cell volume undefined.
+scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_003.inp data_2a: ERROR, not enough data to estimate Z; cell volume undefined; cell length data item '_cell_length_b' was not found.
 scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_003.inp data_2a: ERROR, 1 ERROR(s) encountered -- die on ERROR(s) requested.
 8
