@@ -1,0 +1,2 @@
+scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_004.inp data_7051132: ERROR, not enough data to estimate Z; crystal density undefined; only 2 out of 5 atoms have ratio 3.33333333333333, and other ratios are even less frequent -- can not estimate Z for formula C27 H24 Co N6 O S2.
+scripts/cif_estimate_Z: tests/cases/cif_estimate_Z_004.inp data_7051132: ERROR, 1 ERROR(s) encountered -- die on ERROR(s) requested.
