@@ -37,6 +37,9 @@ cod-tools (unreleased)
         - '_atom_site_adp_type'.
         - '_atom_site_thermal_displace_type'.
         - '_refine_ls_structure_factor_coef'.
+    - cif_estimate_Z:
+	- the script now estimates the Z value from the formula ratio
+	  if crystal density or molecular wight is not given.
   * Fixed:
     - cif_symop_apply:
         - updated the handling of atomic coordinates with standard uncertainties
